--- a/movie-browser/package.json
+++ b/movie-browser/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/pacifico": "^5.1.1",
     "@tailwindcss/cli": "^4.0.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -13,6 +14,8 @@
     "postcss": "^8.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
